netui/test/webapps/drt/web/validation/index.jsp
<%@ page contentType="text/html;charset=UTF-8" language="java" %>
<%@ taglib uri="http://beehive.apache.org/netui/tags-html-1.0" prefix="netui" %>


<html>
<head>
<title>NetUI Validation Tests</title>
</head>
<body bgcolor="white">

<h3>NetUI Validation Tests</h3>

<netui:anchor action="doBasic">basic form validation</netui:anchor>
<br>
<netui:anchor action="doValidator">form validation using Struts ValidatorPlugIn</netui:anchor>

</body>
</html>
